--- a/index.html
+++ b/index.html
@@ -10,34 +10,69 @@
   <body>
     <form action="/action_page.php">
       <div class="container">
-        <h1>Register</h1>
-        <p>Please fill in this form to create an account.</p>
+        <h1>Pendaftaran</h1>
+        <p>Silahkan isi form dibawah ini untuk mendaftar.</p>
         <hr />
+
+        <label for="nama"><b>Nama</b></label>
+        <input type="text" placeholder="Masukkan Nama" name="name" required />
+
+        <label for="nama"><b>Jenis Kelamin</b></label
+        ><br />
+        <div class="radiogroup">
+          <input
+            type="radio"
+            class="jkradio"
+            name="jenis-kelamin"
+            value="lakilaki"
+            required
+          />
+          <label for="lakilaki">Laki-Laki</label><br />
+          <input
+            type="radio"
+            class="jkradio"
+            name="jenis-kelamin"
+            value="perempuan"
+            required
+          />
+          <label for="perempuan">Perempuan</label><br />
+        </div>
+
         <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required />
+        <input
+          type="text"
+          placeholder="Masukkan Alamat Email"
+          name="email"
+          required
+        />
+
         <label for="psw"><b>Password</b></label>
         <input
           type="password"
-          placeholder="Enter Password"
+          placeholder="Masukkan Password"
           name="psw"
           required
         />
-        <label for="psw-repeat"><b>Repeat Password</b></label>
+
+        <label for="psw-repeat"><b>Ulangi Password</b></label>
         <input
           type="password"
-          placeholder="Repeat Password"
+          placeholder="Ulangi Password"
           name="pswrepeat"
           required
         />
+
         <hr />
         <p>
-          By creating an account you agree to our
-          <a href="#">Terms & Privacy</a>.
+          Dengan mendartar, kamu telah menyetujui
+          <a href="#">Syarat & Ketentuan</a> kami.
         </p>
         <button type="submit" class="registerbtn">Register</button>
-      </div>
-      <div class="container signin">
-        <p>Already have an account? <a href="#">Sign in</a>.</p>
+        <div class="signin">
+          <p class="signintext">
+            Already have an account? <a href="#">Sign in</a>.
+          </p>
+        </div>
       </div>
     </form>
   </body>
