commit befor upload to github

--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
           Dengan mendartar, kamu telah menyetujui
           <a href="#">Syarat & Ketentuan</a> kami.
         </p>
-        <button type="submit" class="registerbtn">Register</button>
+        <button type="submit" class="registerbtn">Daftar</button>
         <div class="signin">
-          <p class="signintext">
-            Already have an account? <a href="#">Sign in</a>.
-          </p>
+          <p class="signintext">Sudah punya akun? <a href="#">Masuk</a>.</p>
         </div>
       </div>
     </form>
